# Dagster-workshop

./: .gitignore
project-dagster-university/: CLAUDE.md
project-dagster-university/course/pages/: CLAUDE.md
project-dagster-university/dagster_university/ai_driven_data_engineering/dbt_project/: .user.yml
project-dagster-university/dagster_university/dagster_and_dbt/data/staging/: manhattan_stats.geojson
project-dagster-university/dagster_university/dagster_and_dbt/src/dagster_and_dbt/analytics/: .user.yml
project-dagster-university/dagster_university/dagster_and_dbt/src/dagster_and_dbt/defs/: jobs.py  project.py  resources.py
project-dagster-university/dagster_university/dagster_essentials/: pyproject.toml
project-dagster-university/dagster_university/dagster_essentials/data/staging/: manhattan_stats.geojson
project-dagster-university/dagster_university/dagster_essentials/src/dagster_essentials/defs/: jobs.py  partitions.py  resources.py  schedules.py
university/: README.md  pyproject.toml
university/.dg/: telemetry.yaml
university/analytics/: .user.yml  dbt_project.yml  profiles.yml
university/analytics/models/marts/: fct_order.sql  schema.yml
university/analytics/models/staging/staging/: schema.yml  sources.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
university/src/university/: definitions.py
university/src/university/defs/: jobs.py  project.py  resources.py  schedules.py
university/src/university/defs/assets/: __init__.py  dbt.py  raw_data.py
(+8 files in other folders)
