[project]
name = "university"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.18",
    "dagster-dbt==0.28.18",
    "duckdb>=1.0.0,<2.0.0",
    "dagster-duckdb==0.28.18",
    "dbt-duckdb==1.10.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "university"
registry_modules = [
    "university.components.*",
]
